--- a/Algo/src/main/java/com/algo/mvc/common/jdbc/driver.properties
+++ b/Algo/src/main/java/com/algo/mvc/common/jdbc/driver.properties
@@ -1,4 +1,4 @@
 db.driver=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:oracle:thin:@localhost:1521:xe
+db.url=jdbc:oracle:thin:@112.156.11.186:8100:xe
 db.username=C##ALGO
 db.password=ALGO123
